# inventory

./: Cargo.toml  README.md  install.sh
src/: ansible.rs  aws.rs  config.rs  error.rs  lib.rs
