[package]
authors = ["Coleman McFarland <cmcfarland@paperlesspost.com>"]
edition = "2018"
name = "inventory"
version = "0.2.0"

[dependencies]
env_logger = "0.6.0"
failure = "0.1.5"
futures = "0.1.25"
clap = "2.32.0"
colored = "1.6"
reqwest = "0.9.18"
serde = { version = "1.0.83", features = ["derive"] }
serde_json = "1.0.33"
ssh2 = "0.3.3"
toml = "0.5.1"
prettytable-rs = "0.8.0"
molt = { git = "https://github.com/wduquette/molt", branch = "master" }

[dependencies.rusoto_core]
version = "0.40.0"
default-features = false
features = ["rustls"]

[dependencies.rusoto_credential]
version = "0.40.0"

[dependencies.rusoto_ec2]
version = "0.40.0"
default-features = false
features = ["rustls"]

[dependencies.rusoto_sts]
version = "0.40.0"
default-features = false
features = ["rustls"]

[dependencies.rusoto_elb]
version = "0.40.0"
default-features = false
features = ["rustls"]


[lib]
name = "inventory"
path = "src/lib.rs"

[[bin]]
name = "inventory"
path = "src/bin/inventory/main.rs"

